--- a/index.html
+++ b/index.html
@@ -28,19 +28,11 @@
           watering your plants while you're listening to manele and making the phat moolah
         </p>
 
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/9JdP-S3crt8"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe title="vimeo-player" src="https://player.vimeo.com/video/554269210" width="640" height="360" frameborder="0" allowfullscreen></iframe>
         <hr />
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button type="button" class="btn btn-primary btn-lg px-4 gap-3">
-            Buy it now !!!!!!!!!!!!!!!!!!!!
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            Order now!
           </button>
         </div>
       </div>
