--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         <iframe title="vimeo-player" src="https://player.vimeo.com/video/554269210" width="640" height="360" frameborder="0" allowfullscreen></iframe>
         <hr />
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button type="button" class="btn btn-primary btn-lg px-4 gap-3" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            Order now!
+          <a  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ%22%3E">
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3">
+             Order now!
           </button>
+          </a>
         </div>
       </div>
     </div>
