--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
           Sherman irigation system is the best solution for quickly and securely
-          watering your plants while you're listening to manele and stacking cash
+          watering your plants while you're listening to manele and making hella cash
         </p>
 
         <iframe title="vimeo-player" src="https://player.vimeo.com/video/554269210" width="640" height="360" frameborder="0" allowfullscreen></iframe>
