--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <body>
     <div class="px-4 py-5 my-5 text-center">
-      <h1 class="display-5 fw-bold">Sherman Irigation system</h1>
+      <h1 class="display-5 fw-bold">Sherman Irrigation system</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
           Sherman irigation system is the best solution for quickly and securely
