--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1 class="display-5 fw-bold">Sherman Irrigation system</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
-          Sherman irigation system is the best solution for quickly and securely
+          Sherman is the best solution for quickly and securely
           watering your plants while you're listening to manele and making hella cash
         </p>
 
